MAT-8277 add display id for groups and populations